--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
 	<div class="header">
-		<img src="https://cdn.discordapp.com/attachments/994384566896840895/1096126485087137852/dsadadasd.png" alt="Placeholder Image" />
+		<img src="https://cdn.discordapp.com/attachments/736079657505390642/1242166886477856789/Jeff_Buckley_grace.jpg?ex=664cd990&is=664b8810&hm=6d599b514eaa5cad11093346b353c342207acdab13c0008a85a5e6166804e56c&" alt="Placeholder Image" />
 		<h1>Your <span>Message</span></h1>
 		<p class="subheader">test</p>
 	</div>
