--- a/index.html
+++ b/index.html
@@ -1,110 +1,117 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>disc</title>
-	<style>
-		body {
-			margin: 0;
-			padding: 0;
-			font-family: Arial, sans-serif;
-			background-color: #000000;
-		}
-		
-		.header {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding: 30px 0;
-		}
+    <title>send anything</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #000000;
+        }
+        
+        .header {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 30px 0;
+        }
 
-		h1 {
-			margin: 0;
-			font-size: 48px;
-			font-weight: normal;
-			color: #FFFFFF;
-		}
+        h1 {
+            margin: 0;
+            font-size: 48px;
+            font-weight: normal;
+            color: #FFFFFF;
+        }
 
-		h1 span {
-			font-weight: bold;
-			color: #9400D3;
-		}
+        h1 span {
+            font-weight: bold;
+            color: #9400D3;
+        }
 
-		.subheader {
-			font-size: 24px;
-			color: #FFFFFF;
-			margin-bottom: 10px;
-		}
+        .subheader {
+            font-size: 24px;
+            color: #FFFFFF;
+            margin-bottom: 10px;
+        }
 
-		.textbox {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding: 30px 0;
-		}
+        .textbox {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 30px 0;
+        }
 
-		textarea {
-			width: 400px;
-			height: 200px;
-			font-size: 18px;
-			border-radius: 5px;
-			border: 2px solid #777777;
-			padding: 10px;
-			resize: none;
-			background-color: #FFFFFF;
-		}
+        textarea {
+            width: 400px;
+            height: 200px;
+            font-size: 18px;
+            border-radius: 5px;
+            border: 2px solid #777777;
+            padding: 10px;
+            resize: none;
+            background-color: #FFFFFF;
+        }
 
-		button {
-			margin-top: 20px;
-			font-size: 24px;
-			font-weight: bold;
-			color: #FFFFFF;
-			background-color: #9400D3;
-			border: none;
-			border-radius: 5px;
-			padding: 10px 20px;
-			cursor: pointer;
-		}
+        button {
+            margin-top: 20px;
+            font-size: 24px;
+            font-weight: bold;
+            color: #FFFFFF;
+            background-color: #9400D3;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
 
-		button:hover {
-			background-color: #8000FF;
-		}
+        button:hover {
+            background-color: #8000FF;
+        }
 
-		.made-by {
-			font-size: 18px;
-			color: #FFFFFF;
-			margin-top: 20px;
-			text-align: center;
-		}
+        .made-by {
+            font-size: 18px;
+            color: #FFFFFF;
+            margin-top: 20px;
+            text-align: center;
+        }
 
-		.made-by span {
-			color: #9400D3;
-		}
-	</style>
+        .made-by span {
+            color: #9400D3;
+        }
+    </style>
 </head>
 <body>
-	<div class="header">
-		<img src="https://cdn.discordapp.com/attachments/736079657505390642/1242166886477856789/Jeff_Buckley_grace.jpg?ex=664cd990&is=664b8810&hm=6d599b514eaa5cad11093346b353c342207acdab13c0008a85a5e6166804e56c&" alt="Placeholder Image" />
-		<h1>Your <span>Message</span></h1>
-		<p class="subheader">test</p>
-	</div>
+    <div class="header">
+        <h1>secret <span>message</span></h1>
+    </div>
 
-	<div class="textbox">
-		<textarea id="message" placeholder="type anything down below and it'll be sent to my inbox, only i can see it"></textarea>
-		<button onclick="send()">Send</button>
-	</div>
+    <div class="textbox">
+        <textarea id="message" placeholder="type anything down below and it'll be sent to my inbox, only i can see it"></textarea>
+        <button id="sendButton" onclick="send()">send ur message</button>
+    </div>
 
-	<p class="made-by">Made by <span>chrisss#0001</span></p>
+    <p class="made-by">made by <span>@subfare</span></p>
 
-	<script>
-		function send() {
-			var message = document.getElementById("message").value;
-			var webhookUrl = "https://discord.com/api/webhooks/1242165233435279480/4IYJzSElwU9eIp4L5gvgKD8nv50f__mRKImuVBzp_UaD5piSsbC2k0DfkdQTztZO2vKu";
+    <script>
+        function send() {
+            var message = document.getElementById("message").value;
+            var webhookUrl = "https://discord.com/api/webhooks/1242165233435279480/4IYJzSElwU9eIp4L5gvgKD8nv50f__mRKImuVBzp_UaD5piSsbC2k0DfkdQTztZO2vKu";
+            var sendButton = document.getElementById("sendButton");
 
-			var xhr = new XMLHttpRequest();
-			xhr.open("POST", webhookUrl);
-			xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-			xhr.send(JSON.stringify({"content": message}));
-		}
-	</script>
+            // disable the button to prevent multiple clicks
+            sendButton.disabled = true;
+
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", webhookUrl);
+            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+            xhr.send(JSON.stringify({"content": message}));
+
+            // enable the button after 5 seconds
+            setTimeout(function() {
+                sendButton.disabled = false;
+            }, 5000);
+        }
+    </script>
 </body>
 </html>
